Added login title to the logib view using h2 tag

--- a/Networx/Networx/Networx/Views/Account/Login.cshtml
+++ b/Networx/Networx/Networx/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 @*All views are templates based on the model*@
-
+<h2> Login form </</h2>
 @*Call the login method from the controller*@
 @using (Html.BeginForm("Login", "Account", FormMethod.Post))
 {
