--- a/Networx/Networx/Networx/Views/Game/Edit.cshtml
+++ b/Networx/Networx/Networx/Views/Game/Edit.cshtml
@@ -6,13 +6,13 @@
 
 <h2>Edit</h2>
 @*Calls the overloaded update method with post from the game controller*@
-@using (Html.BeginForm("Update", "Game", FormMethod.Post))
+@using (Html.BeginForm("Edit", "Game", FormMethod.Post))
 {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
             <h4>Game</h4>
-            <hr />
+            
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @*Dont need to see the id for the page*@
             @Html.HiddenFor(model => model.Game_ID)
@@ -36,7 +36,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Year_published, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Year_published, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBoxFor(model => model.Year_published, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker" })
                     @Html.ValidationMessageFor(model => model.Year_published, "", new { @class = "text-danger" })
                 </div>
             </div>
